# scumm-redux

./: CMakeLists.txt
res/icons/: MaterialSymbols.h  extraldg.py  icon_names.txt
src/: main.cpp
src/core/: Application.cpp  Application.h  Settings.cpp  Settings.h  Window.cpp  Window.h
src/ui/: StyleManager.cpp  StyleManager.h  TitleBar.cpp  TitleBar.h  ViewManager.h  WindowDecorator.cpp  WindowDecorator.h
src/utils/: Events.hpp  Utils.cpp  Utils.h
src/views/: ConsoleView.cpp  ConsoleView.h  EditorView.cpp  EditorView.h  ExplorerView.cpp  ExplorerView.h  PropertiesView.cpp  PropertiesView.h  View.cpp  View.h  ViewManager.cpp  ViewManager.h
